--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,15 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="@string/Heading"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoTitleBar">
         <activity android:name=".About"></activity>
         <activity android:name=".MyAccount" />
         <activity android:name=".SignOut" />
         <activity
             android:name=".ChatBar"
-            android:label="@string/app_name"
+            android:label="@string/Heading"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
